Enable more warnings and fix them
But not -Wpedantic because I want to keep my designated initializers,
which are not standard C++ (yet!) apparently.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,10 @@ include(GNUInstallDirs)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+add_compile_options(
+	-Wall -Wextra -Werror
+)
+
 add_library(propcalc SHARED
 	core/variable.cpp
 	core/assignment.cpp
