Implement DIMACS import/export
DIMACS::In reads a DIMACS CNF file and acts like a Stream<Clause> of
the contents. DIMACS::Out takes a Stream<Clause> and produces DIMACS
CNF text lines.

There are DIMACS::read and DIMACS::write to wiring these into the
Formula constructor or an ostream object, respectively.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ add_library(propcalc SHARED
 	core/assignment.cpp
 	core/ast.cpp
 	core/formula.cpp
+	core/dimacs.cpp
 )
 
 configure_file(libpropcalc.pc.in libpropcalc.pc @ONLY)
