Document Truthtable, Tseitin and CNF
Move some source code around from include/ to core/.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,8 @@ add_library(propcalc SHARED
 	core/assignment.cpp
 	core/ast.cpp
 	core/formula.cpp
+	core/tseitin.cpp
+	core/cnf.cpp
 	core/dimacs.cpp
 )
 
